force-app/main/default/objects/Trade__c/fields/BuyAmount__c.field-meta.xml
<CustomField>
    <fullName>BuyAmount__c</fullName>
    <label>BuyAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>