force-app/main/default/objects/Trade__c/fields/BuyCurrency__c.field-meta.xml
<CustomField>
    <fullName>BuyCurrency__c</fullName>
    <label>BuyCurrency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>