force-app/main/default/objects/Trade__c/fields/DateBooked__c.field-meta.xml
<CustomField>
    <fullName>DateBooked__c</fullName>
    <label>DateBooked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>