force-app/main/default/objects/Trade__c/fields/SellAmount__c.field-meta.xml
<CustomField>
    <fullName>SellAmount__c</fullName>
    <label>SellAmount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>