force-app/main/default/objects/Trade__c/fields/SellCurrency__c.field-meta.xml
<CustomField>
    <fullName>SellCurrency__c</fullName>
    <label>SellCurrency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>